--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <h2 class="rtl">
-    أقدر تعليقاتكم لإثراء المحتوى عبر  <a class="internal-link" href="/hypothesis">Hypothesis</a> 
+    أقدر تعليقاتكم لإثراء المحتوى عبر  
 </h2>
 
 <h2>
-    I appreciate your comments to enrich the content via <a class="internal-link" href="/hypothesis">Hypothesis</a>  
+    I appreciate your comments to enrich the content via 
 </h2>
 
